# sui

./: Cargo.toml  help.html  index.html  search-index.js  settings.html  source-files.js
component/: all.html  index.html  struct.Supervisor.html  trait.Manageable.html  type.IrrecoverableError.html
crates/sui-verifier-fuzzer/: Cargo.toml  README.md
crates/sui-verifier-fuzzer/hangs/: id:000000,src:001138,time:19411463,execs:2858095,op:int16,pos:102,val:be:+1000  id:000000,src:001541,time:5954635,execs:1175657,op:havoc,rep:4  id:000001,src:001138,time:19415799,execs:2858289,op:int16,pos:109,val:be:+1000  id:000001,src:001573,time:6077380,execs:1249201,op:havoc,rep:8  id:000002,src:001138,time:19465606,execs:2873967,op:havoc,rep:4  id:000002,src:001619,time:17752052,execs:1950357,op:havoc,rep:2  id:000003,src:001138,time:19476334,execs:2879246,op:havoc,rep:2  id:000003,src:001619,time:17757816,execs:1952533,op:havoc,rep:8  id:000004,src:001138,time:19480372,execs:2880490,op:havoc,rep:2  id:000004,src:001619,time:17779644,execs:1964124,op:havoc,rep:4  id:000005,src:001138,time:19516907,execs:2900385,op:havoc,rep:4  id:000005,src:001619,time:17795354,execs:1970046,op:havoc,rep:4  id:000006,src:001138,time:19529022,execs:2906672,op:havoc,rep:8  id:000006,src:001619,time:17801765,execs:1971188,op:havoc,rep:4  id:000007,src:001138,time:19550237,execs:2918408,op:havoc,rep:8  id:000007,src:001619,time:17806952,execs:1972904,op:havoc,rep:4  id:000008,src:001138,time:19603390,execs:2948554,op:havoc,rep:4  id:000008,src:001904,time:17934292,execs:2047712,op:havoc,rep:2  id:000009,src:001324,time:41977961,execs:4112390,op:int32,pos:103,val:+1000  id:000009,src:001904,time:17939360,execs:2048327,op:havoc,rep:4  id:000010,src:001089,time:66711627,execs:5364170,op:int16,pos:102,val:be:+1000  id:000010,src:001904,time:17944701,execs:2049106,op:havoc,rep:2  id:000011,src:001089,time:66715883,execs:5364310,op:int16,pos:107,val:be:+1000  id:000011,src:001904,time:17946752,execs:2049130,op:havoc,rep:4  id:000012,src:001904,time:17948835,execs:2049174,op:havoc,rep:8  id:000013,src:001904,time:17952152,execs:2049944,op:havoc,rep:4  id:000014,src:001904,time:17954983,execs:2050415,op:havoc,rep:2  id:000015,src:001904,time:17962105,execs:2051075,op:havoc,rep:4  id:000016,src:001904,time:17972922,execs:2055012,op:havoc,rep:2  id:000017,src:001904,time:17976354,execs:2055827,op:havoc,rep:8  id:000018,src:001904,time:18008709,execs:2064544,op:havoc,rep:2  id:000019,src:001904,time:18010927,execs:2064671,op:havoc,rep:16  id:000020,src:001904,time:18016125,execs:2065378,op:havoc,rep:4  id:000021,src:001904,time:18027049,execs:2069147,op:havoc,rep:8  id:000022,src:001904,time:18029175,execs:2069213,op:havoc,rep:4  id:000023,src:001904,time:18033527,execs:2070603,op:havoc,rep:2  id:000024,src:001904,time:18059036,execs:2078201,op:havoc,rep:2  id:000025,src:002032,time:18342795,execs:2246427,op:havoc,rep:2  id:000026,src:002032,time:18367341,execs:2260226,op:havoc,rep:2  id:000027,src:002052,time:18414223,execs:2287765,op:havoc,rep:4  (+53 more)
crates/sui-verifier-fuzzer/src/: main.rs
demo_client/: all.html  constant.BLOCK_GAS_LIMIT.html  constant.PRIMARY_0_PUBLIC_KEY.html  fn.get_total_transaction_count_and_size.html  fn.main.html  fn.println_and_into_inner.html  index.html
mysten_metrics/: all.html  fn.get_metrics.html  fn.init_metrics.html  fn.monitored_scope.html  fn.uptime_metric.html  index.html  macro.monitored_future.html  macro.spawn_logged_monitored_task.html  macro.spawn_monitored_task.html  sidebar-items.js  struct.Metrics.html  struct.MonitoredScopeFuture.html  struct.MonitoredScopeGuard.html  struct.RegistryService.html  trait.MonitoredFutureExt.html  type.RegistryID.html
mysten_network/: all.html  index.html
mysten_util_mem/: all.html  derive.MallocSizeOf.html  fn.malloc_size.html  index.html  macro.malloc_size_of_is_0.html  struct.MallocSizeOfOps.html  struct.MemoryAllocationSnapshot.html  struct.MemoryAllocationTracker.html  struct.MemoryStatsError.html  trait.MallocShallowSizeOf.html  trait.MallocSizeOf.html
mysten_util_mem_derive/: all.html  derive.MallocSizeOf.html  index.html
narwhal_config/: all.html  enum.CommitteeUpdateError.html  enum.ConfigError.html  index.html  struct.AnemoParameters.html  struct.Authority.html  struct.BlockSynchronizerParameters.html  struct.Committee.html  struct.ConsensusAPIGrpcParameters.html  struct.NetworkAdminServerParameters.html  struct.Parameters.html  struct.PrometheusMetricsParameters.html  struct.WorkerCache.html  struct.WorkerIndex.html  struct.WorkerInfo.html  trait.Export.html  trait.Import.html  type.Epoch.html  type.SharedCommittee.html  type.SharedWorkerCache.html  type.Stake.html  type.WorkerId.html
narwhal_consensus/: all.html  constant.DEFAULT_CHANNEL_SIZE.html  constant.NUM_SHUTDOWN_RECEIVERS.html  index.html
narwhal_crypto/: all.html  constant.DIGEST_LENGTH.html  index.html  type.AggregateSignature.html  type.DefaultHashFunction.html  type.KeyPair.html  type.NetworkKeyPair.html  type.NetworkPublicKey.html  type.PrivateKey.html  type.PublicKey.html  type.Signature.html
narwhal_dag/: all.html  fn.bfs.html  index.html  struct.Node.html  struct.NodeRef.html  type.WeakNodeRef.html
narwhal_executor/: all.html  enum.SubscriberError.html  fn.get_restored_consensus_output.html  index.html  macro.bail.html  macro.ensure.html  struct.ExecutionIndices.html  struct.Executor.html  struct.MockExecutionState.html  trait.ExecutionState.html  type.SerializedTransaction.html  type.SerializedTransactionDigest.html  type.SubscriberResult.html
narwhal_network/: all.html  fn.multiaddr_to_address.html  index.html  struct.CancelOnDropHandler.html  struct.RetryConfig.html  trait.PrimaryToPrimaryRpc.html  trait.PrimaryToWorkerRpc.html  trait.ReliableNetwork.html  trait.UnreliableNetwork.html  trait.WorkerRpc.html
narwhal_node/: all.html  enum.NodeError.html  index.html  struct.NodeStorage.html
narwhal_primary/: all.html  constant.CHANNEL_CAPACITY.html  constant.NUM_SHUTDOWN_RECEIVERS.html  enum.NetworkModel.html  index.html  struct.BlockRemover.html  (+5 more)
(+2966 files in other folders)
