[workspace]
resolver = "2"
members = [
    "crates/mysten-metrics",
    "crates/mysten-network",
    "crates/mysten-util-mem",
    "crates/mysten-util-mem-derive",
    "crates/prometheus-closure-metric",
    "crates/sui",
    "crates/sui-adapter",
    "crates/sui-adapter-transactional-tests",
    "crates/sui-benchmark",
    "crates/sui-cluster-test",
    "crates/sui-config",
    "crates/sui-core",
    "crates/sui-cost",
    "crates/sui-cost-tables",
    "crates/sui-faucet",
    "crates/sui-framework",
    "crates/sui-framework-build",
    "crates/sui-indexer",
    "crates/sui-json",
    "crates/sui-json-rpc",
    "crates/sui-json-rpc-types",
    "crates/sui-keys",
    "crates/sui-macros",
    "crates/sui-move",
    "crates/sui-network",
    "crates/sui-node",
    "crates/sui-open-rpc",
    "crates/sui-open-rpc-macros",
    "crates/sui-proc-macros",
    "crates/sui-protocol-config",
    "crates/sui-rosetta",
    "crates/sui-sdk",
    "crates/sui-simulator",
    "crates/sui-source-validation",
    "crates/sui-storage",
    "crates/sui-swarm",
    "crates/sui-telemetry",
    "crates/sui-test-validator",
    "crates/sui-tls",
    "crates/sui-tool",
    "crates/sui-transaction-builder",
    "crates/sui-transactional-test-runner",
    "crates/sui-types",
    "crates/sui-verifier",
    "crates/sui-verifier-transactional-tests",
    "crates/telemetry-subscribers",
    "crates/test-utils",
    "crates/typed-store",
    "crates/typed-store-derive",
    "crates/workspace-hack",
    "crates/x",
    "narwhal/config",
    "narwhal/consensus",
    "narwhal/crypto",
    "narwhal/dag",
    "narwhal/examples",
    "narwhal/executor",
    "narwhal/network",
    "narwhal/node",
    "narwhal/primary",
    "narwhal/storage",
    "narwhal/test-utils",
    "narwhal/types",
    "narwhal/worker",
]

[workspace.package]
# This version string will be inherited by sui-core, sui-faucet, sui-node, sui-tools, sui-sdk, and sui crates
version = "0.28.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, sui binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]

tokio = "1.24.1"

# Move dependencies
move-binary-format = { path = "../move/language/move-binary-format" }
move-bytecode-utils = { path = "../move/language/tools/move-bytecode-utils" }
move-bytecode-verifier = { path = "../move/language/move-bytecode-verifier" }
move-cli = { path = "../move/language/tools/move-cli" }
move-compiler = { path = "../move/language/move-compiler" }
move-core-types = { path = "../move/language/move-core/types", features = ["address20"] }
move-disassembler = { path = "../move/language/tools/move-disassembler" }
move-package = { path = "../move/language/tools/move-package" }
move-stdlib = { path = "../move/language/move-stdlib" }
move-vm-runtime = { path = "../move/language/move-vm/runtime" }
move-unit-test = { path = "../move/language/tools/move-unit-test" }
move-vm-test-utils = { path = "../move/language/move-vm/test-utils" }
move-vm-types = { path = "../move/language/move-vm/types" }
move-command-line-common = { path = "../move/language/move-command-line-common" }
move-transactional-test-runner = { path = "../move/language/testing-infra/transactional-test-runner" }
move-ir-types = { path = "../move/language/move-ir/types" }
move-prover = { path = "../move/language/move-prover" }
move-prover-boogie-backend = { path = "../move/language/move-prover/boogie-backend" }
move-stackless-bytecode = { path = "../move/language/move-prover/bytecode" }
move-symbol-pool = { path = "../move/language/move-symbol-pool" }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "285e3f238112703cdfb7eb21e0ea3100e2882e14" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "285e3f238112703cdfb7eb21e0ea3100e2882e14", package = "fastcrypto-zkp" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "285e3f238112703cdfb7eb21e0ea3100e2882e14", package = "fastcrypto-tbls" }

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "d4017b6cefad7ebc5e84b5c6b8eeff4668f719ff" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "d4017b6cefad7ebc5e84b5c6b8eeff4668f719ff" }
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "d4017b6cefad7ebc5e84b5c6b8eeff4668f719ff" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "d4017b6cefad7ebc5e84b5c6b8eeff4668f719ff" }

# Use the same workspace-hack across crates.
workspace-hack = { path = "crates/workspace-hack" }

mysten-network = { path = "crates/mysten-network" }
telemetry-subscribers = { path = "crates/telemetry-subscribers" }
mysten-util-mem = { path = "crates/mysten-util-mem" }
typed-store = { path = "crates/typed-store" }
typed-store-derive = { path = "crates/typed-store-derive" }
