[package]
name = "sui-verifier-fuzzer"
version = "0.0.0"
edition = "2021"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "AFL fuzz setup for Move and Sui verifiers"
license = "Apache-2.0"
publish = false

[dependencies]
arbitrary = { version = "1", optional = false, features = ["derive"] }

move-binary-format.workspace = true
move-bytecode-verifier.workspace = true

sui-framework-build = { path = "../sui-framework-build" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
sui-verifier = { path = "../../crates/sui-verifier" }
